<resources>
    <string name="app_name">WS Lock</string>
    <string name="app_description">Fechadura Inteligente</string>
    <string name="app_logo">WS Lock</string>

    <string name="sign">Entrar</string>
    <string name="logout">Sair</string>
    <string name="dont_have_account">Não tem uma conta?</string>
    <string name="create_account">Crie uma!</string>

    <string name="user_form">Cadastro de Usuário</string>
    <string name="username_hint">Usuário</string>
    <string name="login_hint">Login ou e-mail</string>
    <string name="register_user">Cadastrar</string>
    <string name="save_user">Salvar</string>
    <string name="password_hint">Senha</string>
    <string name="new_password_hint">Nova senha</string>
    <string name="password_confirmation_hint">Confirmação de senha</string>
    <string name="name_hint">Nome</string>
    <string name="email_hint">E-mail</string>

    <string name="lock_list_illustration_description">Não há fechaduras cadastradas</string>
    <string name="lock_list_floating_action_button_description">Adicionar nova fechadura</string>
    <string name="lock_list_lock_owner_description">Proprietário(a):</string>

    <string name="lock_form_name_hint">Descrição da fechadura</string>
    <string name="lock_form_mac_address_hint">Código da fechadura</string>
    <string name="lock_form_users_select_label">Usuários com acesso a fechadura:</string>
    <string name="lock_form_save_btn">Salvar</string>

    <string name="last_activity_in">Última atividade em:</string>
    <string name="last_activity_executed_by">Executada por:</string>
    <string name="home_list_open_lock">Destrancar</string>
    <string name="home_list_close_lock">Trancar</string>
    <string name="register_first_lock">Cadastrar Primeira Fechadura</string>
    <string name="lock_history_list_floating_action_button_description">Selecionar fechadura</string>

    <string name="lock_history_list_illustration_description">Ainda não há históricos registrados</string>
    <string name="lock_list_history_lock_description">Fechadura:</string>
    <string name="lock_list_history_username_description">Usuário:</string>
    <string name="lock_list_history_description">Descrição:</string>
    <string name="lock_list_history_created_at">Data:</string>

    <string name="bottom_navigation_home_option">Home</string>
    <string name="bottom_navigation_locks_option">Fechaduras</string>
    <string name="bottom_navigation_lock_histories_option">Histórico</string>
    <string name="bottom_navigation_user_profile_option">Perfil</string>

    <string name="dialog_confirmation_positive_text">Confirmar</string>
    <string name="dialog_confirmation_negative_text">Cancelar</string>

    <string name="dialog_lock_filter_title">Filtro de Fechadura</string>
    <string name="dialog_lock_filter_message">Selecione uma fechadura:</string>
</resources>