<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/fragment_lock_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/divider_color"
        android:dividerHeight="1dp" />

    <LinearLayout
        android:id="@+id/welcome_illustration_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/lock_list_illustration" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:paddingVertical="5dp"
            android:text="@string/lock_list_illustration_description"
            android:textAlignment="center"
            android:textColor="@color/gray_200"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_first_lock_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:background="@drawable/button_background"
            android:text="@string/register_first_lock"
            android:textAllCaps="false"
            android:textColor="@color/gray_200"
            android:textStyle="bold"
            android:typeface="sans"
            app:backgroundTint="@null" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/lock_list_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/lock_list_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/lock_list_floating_action_button_description"
        android:src="@drawable/ic_baseline_add_24" />

</RelativeLayout>
